--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 09 08:47:10 ICT 2023
-sdk.dir=C\:\\Users\\khoil\\AppData\\Local\\Android\\Sdk
+#Wed Mar 15 21:21:42 ICT 2023
+sdk.dir=/home/khoildm/Android/Sdk
